2012-04-01  Adam Barth  <abarth@webkit.org>

        Code review tool no longer needs to work around position:fixed handling on iPad
        https://bugs.webkit.org/show_bug.cgi?id=82850

        Reviewed by Eric Seidel.

        We no longer need to avoid position:fixed on iPad because Mobile Safari
        now does something reasonable with position:fixed elements.

        * code-review.js:

2012-03-09  Ashod Nakashian  <ashodnakashian@yahoo.com>

        Bash scripts should support LF endings only
        https://bugs.webkit.org/show_bug.cgi?id=79509

        Reviewed by David Kilzer.

        * contrib/yp_nomail.sh: Added property svn:executable.

2012-03-05  Alexander Færøy  <alexander.faeroy@nokia.com>

        The Bugzilla autocompleter doesn't support multiple Unicode characters per name
        https://bugs.webkit.org/show_bug.cgi?id=80319

        Reviewed by Adam Barth.

        The current regular expression for matching Unicode characters uses
        the global modifier, which means that it will never enter its second
        iteration of the match-loop. This patch fixes this by removing the
        global modifier from the regex.

        * committers-autocomplete.js:
        (WebKitCommitters):

2012-01-03  Ojan Vafai  <ojan@chromium.org>

        Increment the code-review.js version number to bust browser
        caches.

        * PrettyPatch/PrettyPatch.rb:

2011-12-13  Ojan Vafai  <ojan@chromium.org>

        Give a resize handle for sidebyside diffs.
        https://bugs.webkit.org/show_bug.cgi?id=74465

        Reviewed by Ryosuke Niwa.

        This gives a drag handle so you can make the side-by-side
        diff not be 50/50 on a per-file-diff basis. This is useful
        for cases like new files where there's no value on the
        left side.

        * PrettyPatch/PrettyPatch.rb:
        * code-review.js:

2011-12-13  Ojan Vafai  <ojan@chromium.org>

        Expanding context is broken for prepare-ChangeLog in the code review tool.